# data_engineering

./: .gitignore  README.md  pyproject.toml
data/JSON/Волга/Исходные/: Книга_1.json  Книга_2.json  Книга_3.json  Книга_4.json  Книга_5.json  Книга_6.json
data/JSON/Волга/Предобработанные/: Книга_1_preprocessed.json  Книга_2_preprocessed.json  Книга_3_preprocessed.json  Книга_4_preprocessed.json  Книга_5_preprocessed.json  Книга_6_preprocessed.json
data/JSON/Дон/Исходные/: Книга_1.json  Книга_2.json  Книга_3.json  Книга_4.json  Книга_5.json  Книга_6.json
data/JSON/Дон/Предобработанные/: Книга_1_preprocessed.json  Книга_2_preprocessed.json  Книга_3_preprocessed.json  Книга_4_preprocessed.json  (+2 more)
documnets/: 24_ТЗ_Цифровое_преобразование_15_08_2024_11_00.docx  Векторные БД отчет.docx
notebooks/EDA/: eda.ipynb  tfidf_analysis.csv  vector_db_dashboard.ipynb
notebooks/data_collection/: collecting.ipynb
notebooks/data_preprocessing/pdf_decomposer_visually/: main.py
notebooks/data_preprocessing/pdf_json_decomposer/: libs.py  script.ipynb  structuring.ipynb
notebooks/db_vectorization/: look_at_json.ipynb  metrics.ipynb  testing.csv  vector_db_dashboard.ipynb  vectorization_all.ipynb
notebooks/evaluation/: metrics_model_emb.ipynb
notebooks/experiment_docling/: lab_getting_markdown.ipynb
notebooks/experiment_docling/outputs/: Волга_Книга_1.md  Волга_Книга_2.md
notebooks/experiment_structurization_pdf/: exp_strcut_pdf.ipynb
notebooks/getting_path/: get_path.ipynb  greeting.json  hierarchical_book_structure.json  hierarchical_structure.json
(+76 files in other folders)
